<resources>
    <string name="app_name">ThaliApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="one_string">Calender</string>
    <string name="two_string">Eetlijst</string>
    <string name="three_string">Login</string>
    <string name="four_string">Instellingen</string>
    <string name="title_activity_instellingen">Instellingen</string>
    <string name="title_activity_eetlijst">Eetlijst</string>
    <string name="title_activity_pizza">Pizza</string>
    <string name="title_activity_fries">Fries</string>
    <string name="title_activity_snack">Snack</string>
    <string name="title_activity_broodjes">Broodjes</string>
    <string name="Persoon">Name</string>
    <string name="Friet">Friet</string>
    <string name="Broodjes">Broodjes</string>
    <string name="Snacks">Snacks</string>
    <string name="Pizza">Pizza</string>
    <string name="Overig">Overig</string>
    <string name="Bedrag">Totaalbedrag</string>
    <string name="Borrel">Borrels</string>
    <string name="Feest">Feestjes</string>
    <string name="Lezing">Lezingen</string>
    <string name="ALV">ALVs</string>
    <string name="Workshop">Workshops</string>
    <string name="title_activity_list_adapter">ListAdapter</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="Notificationsdeel1">Tijd voor ontvangen:</string>
    <string name="Notificationsdeel2">minuten</string>
    <string name="title_activity_pizzalijst">Pizzalist</string>
    <string name="title_activity_information">Information</string>
    <string name="title_activity_bon">Receipt</string>
    <string name="title_activity_inlog">Inlog</string>
    <string name="title_activity_overzicht">Overzicht</string>
    <string name="title_activity_foodlist">Foodlist</string>
</resources>
