<?xml version="1.0" encoding="UTF-8"?>

    <menu android:layout_height="wrap_content" android:layout_width="40dp" xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/one_string" android:layout_height="wrap_content" android:layout_width="wrap_content" android:orderInCategory="1" android:id="@+id/menu1"/>

    <item android:title="@string/two_string" android:layout_height="wrap_content" android:layout_width="wrap_content" android:orderInCategory="2" android:id="@+id/menu2"/>

    <item android:title="@string/three_string" android:layout_height="wrap_content" android:layout_width="wrap_content" android:orderInCategory="3" android:id="@+id/menu3"/>

    <item android:title="@string/four_string" android:layout_height="wrap_content" android:layout_width="wrap_content" android:orderInCategory="4" android:id="@+id/menu4"/>

</menu>