<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.AppArt.menu.Eetlijst">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/Persoon"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_above="@+id/Friet"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="55dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Friet"
        android:id="@+id/Friet"
        android:onClick="friet"
        android:layout_above="@+id/Snacks"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Broodjes"
        android:id="@+id/Broodjes"
        android:onClick="broodjes"
        android:layout_marginBottom="90dp"
        android:layout_above="@+id/Totaalbedrag"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Snacks"
        android:id="@+id/Snacks"
        android:onClick="snacks"
        android:layout_above="@+id/Pizza"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pizza"
        android:id="@+id/Pizza"
        android:onClick="pizza"
        android:layout_above="@+id/Broodjes"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Bedrag"
        android:id="@+id/Totaalbedrag"
        android:onClick="bedrag"
        android:layout_marginBottom="42dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
